--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
                         <h4 class="font-semibold text-white mb-2" data-translate="tech_title">Technologies</h4>
                         <!-- Remplacez les technologies -->
                         <ul class="flex flex-wrap gap-2">
-                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">Adobe Premiere Pro</li>
-                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">CapCut</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">HTML CSS JS</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">Figma</li>
                         </ul>
                     </div>
                 </div>
