--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <div>
                      <!-- Remplacez le poster par le nom de votre image et la source par le nom de votre vidéo -->
                     <video class="rounded-lg shadow-lg lightbox-trigger" controls poster="ambassade-uk-projet.jpg">
-                        <source src="ambassade-uk-demo.mp4" type="video/mp4">
+                        <source src="ukembassy.m4v" type="video/m4v">
                         Votre navigateur ne supporte pas la balise vidéo.
                     </video>
                 </div>
@@ -212,10 +212,11 @@
                     <div class="mt-4">
                         <h4 class="font-semibold text-white mb-2" data-translate="tech_title">Technologies</h4>
                         <ul class="flex flex-wrap gap-2">
-                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">UI/UX Design</li>
-                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">HTML/CSS</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">Figma</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">HTML</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">CSS</li>
                             <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">JavaScript</li>
-                             <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">Gestion de Projet</li>
+                             <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">React</li>
                         </ul>
                     </div>
                 </div>
@@ -241,7 +242,7 @@
 
             <!-- PROJET 3: Carte de visite digitale - M. Hamdy -->
             <div class="grid md:grid-cols-2 gap-8 items-center">
-                <img src="https://placehold.co/600x400/0d1117/2dd4bf?text=Carte+Digitale+1" alt="Carte de visite digitale pour Eng. Micheal Hamdy" class="rounded-lg shadow-lg cursor-pointer lightbox-trigger">
+                <img src="2.png" alt="Carte de visite digitale pour Eng. Micheal Hamdy" class="rounded-lg shadow-lg cursor-pointer lightbox-trigger">
                 <div>
                     <h3 class="text-2xl font-bold text-gradient-accent mb-2" data-translate="comm_michael_card_title">Carte de Visite Digitale - Eng. M. Hamdy</h3>
                     <p data-translate="comm_michael_card_desc">Création d'une carte de visite digitale interactive bilingue (anglais/arabe) avec fonctionnalités avancées de partage et de networking pour un ingénieur.</p>
@@ -249,7 +250,10 @@
                         <h4 class="font-semibold text-white mb-2" data-translate="tech_title">Technologies</h4>
                         <ul class="flex flex-wrap gap-2">
                             <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">Figma</li>
-                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">HTML/CSS/JS</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">HTML</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">CSS</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">JavaScript</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">React</li>
                         </ul>
                     </div>
                 </div>
@@ -258,7 +262,7 @@
             <!-- PROJET 4: Carte de visite digitale - M. Zakzouk -->
             <div class="grid md:grid-cols-2 gap-8 items-center">
                  <div class="md:order-2">
-                    <img src="https://placehold.co/600x400/0d1117/2dd4bf?text=Carte+Digitale+2" alt="Carte de visite digitale pour Mohammed Zakzouk" class="rounded-lg shadow-lg cursor-pointer lightbox-trigger">
+                    <img src="3.png" alt="Carte de visite digitale pour Mohammed Zakzouk" class="rounded-lg shadow-lg cursor-pointer lightbox-trigger">
                 </div>
                 <div class="md:order-1">
                     <h3 class="text-2xl font-bold text-gradient-accent mb-2" data-translate="comm_zakzouk_card_title">Carte de Visite Animée - M. Zakzouk</h3>
@@ -266,8 +270,11 @@
                     <div class="mt-4">
                         <h4 class="font-semibold text-white mb-2" data-translate="tech_title">Technologies</h4>
                         <ul class="flex flex-wrap gap-2">
-                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">Canva</li>
-                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">After Effects</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">Figma</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">HTML</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">CSS</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">JavaScript</li>
+                            <li class="bg-gray-700 text-xs font-semibold px-2.5 py-0.5 rounded-full">React</li>
                         </ul>
                     </div>
                 </div>
