--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <div>
                      <!-- Remplacez le poster par le nom de votre image et la source par le nom de votre vidéo -->
                     <video class="rounded-lg shadow-lg lightbox-trigger" controls poster="ambassade-uk-projet.jpg">
-                        <source src="ukembassy.m4v" type="video/mp4">
+                        <source src="ukembassy.mp4" type="video/mp4">
                         Votre navigateur ne supporte pas la balise vidéo.
                     </video>
                 </div>
