--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 <div class="flex items-center">
                     <ul class="hidden md:flex items-center space-x-6">
                         <li><a href="#about" class="nav-link hover:text-gradient-accent transition-colors" data-translate="nav_about">À propos</a></li>
+                        <li><a href="#engagement" class="nav-link hover:text-gradient-accent transition-colors" data-translate="nav_values">Valeurs</a></li>
                         <li><a href="#skills" class="nav-link hover:text-gradient-accent transition-colors" data-translate="nav_skills">Compétences</a></li>
                         <li><a href="#portfolio" class="nav-link hover:text-gradient-accent transition-colors" data-translate="nav_portfolio">Portfolio</a></li>
                         <li><a href="#experience" class="nav-link hover:text-gradient-accent transition-colors" data-translate="nav_experience">Parcours</a></li>
@@ -318,12 +319,14 @@
             <!-- PROJET 5: Logo RP RATTAN PALACE -->
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div class="grid grid-cols-2 gap-4">
-                     <img src="logo-rp-1.png" alt="Logo Rattan Palace - Format 1" class="rounded-lg shadow-lg cursor-pointer lightbox-trigger bg-white p-2">
-                     <img src="logo-rp-2.png" alt="Logo Rattan Palace - Format 2" class="rounded-lg shadow-lg cursor-pointer lightbox-trigger bg-white p-2">
+                     <img src="logorp.png" alt="Logo Rattan Palace - Format 1" class="rounded-lg shadow-lg cursor-pointer lightbox-trigger bg-white p-2">
+                     <img src="logorpy.png" alt="Logo Rattan Palace - Format 2" class="rounded-lg shadow-lg cursor-pointer lightbox-trigger bg-white p-2">
+                     <img src="logorpt.png" alt="Logo Rattan Palace sur T-shirt" class="rounded-lg shadow-lg cursor-pointer lightbox-trigger bg-white p-2">
+                     <img src="logorpyt.png" alt="Logo Rattan Palace sur T-shirt" class="rounded-lg shadow-lg cursor-pointer lightbox-trigger bg-white p-2">
                 </div>
                 <div>
                     <h3 class="text-2xl font-bold text-gradient-accent mb-2" data-translate="comm_rp_logo_title">Identité Visuelle - Rattan Palace</h3>
-                    <p data-translate="comm_rp_logo_desc">Conception de l'identité visuelle pour Rattan Palace, une usine de fabrication à Riyad. Le projet incluait la création de deux formats de logo distincts, optimisés pour divers supports, y compris l'impression sur les t-shirts des salariés.</p>
+                    <p data-translate="comm_rp_logo_desc">Conception de l'identité visuelle pour Rattan Palace, une usine de fabrication à Riyad. Le projet incluait la création de deux formats de logo distincts et leur déclinaison pour des applications variées, comme l'impression sur les t-shirts des salariés.</p>
                     <div class="mt-4">
                         <h4 class="font-semibold text-light mb-2" data-translate="tech_title">Technologies</h4>
                         <ul class="flex flex-wrap gap-2">
@@ -609,4 +612,5 @@
     </script>
 </body>
 </html>
+
 
