--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                     <div class="overflow-hidden rounded-lg">
                         <img src="morpholia-project.png" alt="Projet MORPHOLIA" class="project-card-image w-full h-full object-cover transition-transform duration-500">
                     </div>
-                    <h3 class="font-bold text-lg mt-4">MORPHOLIA - Site E-commerce</h3>
-                    <p class="text-sm text-zinc-400">UI/UX Design & Intégration WordPress</p>
+                    <h3 class="font-bold text-lg mt-4">MORPHOLIA - Projet d'Études</h3>
+                    <p class="text-sm text-zinc-400">Chef de Projet, UI/UX & Marketing</p>
                 </div>
 
                 <!-- Project 2: Hilton Hotel -->
@@ -189,7 +189,7 @@
                         <img src="logorp.png" alt="Rattan Palace Logo" class="project-card-image w-full h-full object-cover transition-transform duration-500 bg-white p-2">
                     </div>
                     <h3 class="font-bold text-lg mt-4">Rattan Palace</h3>
-                    <p class="text-sm text-zinc-400">Identité Visuelle</p>
+                    <p class="text-sm text-zinc-400">Identité Visuelle d'Entreprise</p>
                 </div>
 
                 <!-- Project 4: UK Embassy Platform -->
@@ -216,7 +216,7 @@
                         <img src="khayal-desktop.jpg" alt="Site Khayal & Co" class="project-card-image w-full h-full object-cover transition-transform duration-500">
                     </div>
                     <h3 class="font-bold text-lg mt-4">Khayal & Co.</h3>
-                    <p class="text-sm text-zinc-400">Identité de marque & Site Vitrine</p>
+                    <p class="text-sm text-zinc-400">Projet Créatif Personnel</p>
                 </div>
 
             </div>
@@ -283,17 +283,17 @@
     <div id="modal-morpholia" class="modal">
         <div class="modal-content card rounded-2xl p-8 relative">
             <button class="modal-close absolute top-4 right-6 text-zinc-400 hover:text-white text-2xl">&times;</button>
-            <h2 class="text-3xl font-bold font-title text-gradient mb-4">MORPHOLIA - Site E-commerce</h2>
+            <h2 class="text-3xl font-bold font-title text-gradient mb-4">MORPHOLIA - Projet d'Études</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
                     <h4 class="font-bold text-lg mb-2">Le Projet</h4>
-                    <p class="text-zinc-400 text-sm">Pour la marque de mode grande taille Morpholia, j'ai mené le projet de A à Z : recherche utilisateur, création des personas, conception des wireframes et prototypes interactifs sur Figma, jusqu'à l'intégration finale du design sur WordPress.</p>
+                    <p class="text-zinc-400 text-sm"><b>Contexte :</b> Dans le cadre de ma formation diplômante, le défi était de créer de A à Z une marque et une plateforme e-commerce complète pour le lancement de Morpholia, une marque de mode grande taille.<br><br><b>Action :</b> J'ai endossé une triple casquette : Chef de Projet E-commerce, Designer UI/UX et responsable Marketing Digital. J'ai mené la recherche utilisateur, conçu l'identité visuelle et les prototypes sur Figma, et piloté la stratégie de lancement.<br><br><b>Résultat :</b> Le projet a non seulement validé ma certification, mais a aussi abouti à un site e-commerce fonctionnel et une stratégie marketing complète, démontrant ma capacité à gérer un projet digital dans sa globalité.</p>
                     <h4 class="font-bold text-lg mt-6 mb-2">Technologies</h4>
                     <div class="flex flex-wrap gap-2 text-xs">
                         <span class="bg-zinc-800 text-zinc-300 px-2 py-1 rounded">Figma</span>
                         <span class="bg-zinc-800 text-zinc-300 px-2 py-1 rounded">WordPress</span>
-                        <span class="bg-zinc-800 text-zinc-300 px-2 py-1 rounded">Tests Utilisateurs</span>
                         <span class="bg-zinc-800 text-zinc-300 px-2 py-1 rounded">UX Research</span>
+                        <span class="bg-zinc-800 text-zinc-300 px-2 py-1 rounded">Marketing Digital</span>
                     </div>
                 </div>
                 <img src="morpholia-project.png" class="rounded-lg w-full h-auto object-cover">
@@ -309,7 +309,7 @@
              <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
                     <h4 class="font-bold text-lg mb-2">Le Projet</h4>
-                    <p class="text-zinc-400 text-sm">Contribution au design de plusieurs espaces pour le projet hôtelier Hilton Garden Inn en Arabie Saoudite. Création de rendus 3D photo-réalistes pour les chambres et les espaces communs, en utilisant 3ds Max pour des modélisations complexes et des finitions détaillées.</p>
+                    <p class="text-zinc-400 text-sm"><b>Contexte :</b> Le projet hôtelier Hilton Garden Inn en Arabie Saoudite nécessitait des rendus 3D photo-réalistes pour visualiser les futurs espaces et aider à la prise de décision.<br><br><b>Action :</b> J'ai créé des modélisations 3D complexes et des rendus détaillés pour les chambres et les espaces communs en utilisant 3ds Max, AutoCAD et SketchUp.<br><br><b>Résultat :</b> Les visuels ont permis aux parties prenantes de valider les choix de design, d'accélérer le processus de décision et ont servi de supports marketing de haute qualité avant la construction.</p>
                     <h4 class="font-bold text-lg mt-6 mb-2">Technologies</h4>
                     <div class="flex flex-wrap gap-2 text-xs">
                         <span class="bg-zinc-800 text-zinc-300 px-2 py-1 rounded">3ds Max</span>
@@ -331,11 +331,11 @@
     <div id="modal-rattan" class="modal">
         <div class="modal-content card rounded-2xl p-8 relative">
             <button class="modal-close absolute top-4 right-6 text-zinc-400 hover:text-white text-2xl">&times;</button>
-            <h2 class="text-3xl font-bold font-title text-gradient mb-4">Rattan Palace - Identité Visuelle</h2>
+            <h2 class="text-3xl font-bold font-title text-gradient mb-4">Rattan Palace - Identité d'Entreprise</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
                     <h4 class="font-bold text-lg mb-2">Le Projet</h4>
-                    <p class="text-zinc-400 text-sm">Conception de l'identité visuelle pour Rattan Palace, une usine de fabrication à Riyad. Le projet incluait la création de deux formats de logo distincts et leur déclinaison pour des applications variées, comme l'impression sur les t-shirts des salariés.</p>
+                    <p class="text-zinc-400 text-sm"><b>Contexte :</b> Rattan Palace, une usine à Riyad, avait besoin d'une identité visuelle professionnelle pour renforcer son image de marque auprès de ses clients et de ses employés.<br><br><b>Action :</b> J'ai conçu une identité visuelle complète. J'ai créé deux formats de logo pour une polyvalence maximale et j'ai décliné cette identité sur plusieurs supports clés : les t-shirts et casquettes des employés, ainsi que les documents officiels.<br><br><b>Résultat :</b> L'entreprise a bénéficié d'une image de marque modernisée et cohérente, améliorant sa reconnaissance et renforçant significativement le sentiment d'appartenance des équipes.</p>
                     <h4 class="font-bold text-lg mt-6 mb-2">Technologies</h4>
                     <div class="flex flex-wrap gap-2 text-xs">
                         <span class="bg-zinc-800 text-zinc-300 px-2 py-1 rounded">Illustrator</span>
@@ -360,7 +360,7 @@
              <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
                     <h4 class="font-bold text-lg mb-2">Le Projet</h4>
-                    <p class="text-zinc-400 text-sm">Développement d'une plateforme web sur mesure pour optimiser la gestion des projets de rénovation pour l'Ambassade du Royaume-Uni à Riyad. L'outil offre un suivi en temps réel, une comparaison de designs et un accès sécurisé aux documents.</p>
+                    <p class="text-zinc-400 text-sm"><b>Contexte :</b> La gestion des projets de rénovation pour l'Ambassade du Royaume-Uni à Riyad était complexe et manquait d'un outil de suivi centralisé.<br><br><b>Action :</b> J'ai développé une plateforme web sur mesure avec React, offrant un suivi en temps réel, une comparaison de designs et un accès sécurisé aux documents.<br><br><b>Résultat :</b> La collaboration a été fluidifiée, les délais de validation ont été réduits, et la gestion de projet est devenue plus transparente et efficace dans un environnement diplomatique exigeant.</p>
                     <h4 class="font-bold text-lg mt-6 mb-2">Technologies</h4>
                     <div class="flex flex-wrap gap-2 text-xs">
                         <span class="bg-zinc-800 text-zinc-300 px-2 py-1 rounded">React</span>
@@ -384,7 +384,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
                     <h4 class="font-bold text-lg mb-2">Le Projet</h4>
-                    <p class="text-zinc-400 text-sm">Gestion complète d'un projet de dressing sur mesure, de la conception initiale sur SketchUp à la supervision de l'installation. Ce projet met en lumière ma capacité à traduire une vision en un espace fonctionnel et esthétique.</p>
+                    <p class="text-zinc-400 text-sm"><b>Contexte :</b> Un client particulier souhaitait un espace dressing sur mesure qui soit à la fois esthétique et hautement fonctionnel, mais manquait d'une vision claire du design final.<br><br><b>Action :</b> J'ai géré le projet de la conception initiale sur SketchUp à la supervision de l'installation, en traduisant les besoins du client en un design 3D détaillé et en coordonnant la réalisation.<br><br><b>Résultat :</b> Le client a obtenu un espace parfaitement adapté à ses besoins, optimisant le rangement et l'esthétique, avec une satisfaction totale grâce à la visualisation précise avant la fabrication.</p>
                     <h4 class="font-bold text-lg mt-6 mb-2">Technologies</h4>
                     <div class="flex flex-wrap gap-2 text-xs">
                         <span class="bg-zinc-800 text-zinc-300 px-2 py-1 rounded">SketchUp</span>
@@ -404,11 +404,11 @@
     <div id="modal-khayal" class="modal">
         <div class="modal-content card rounded-2xl p-8 relative">
             <button class="modal-close absolute top-4 right-6 text-zinc-400 hover:text-white text-2xl">&times;</button>
-            <h2 class="text-3xl font-bold font-title text-gradient mb-4">Khayal & Co. - Site Vitrine</h2>
+            <h2 class="text-3xl font-bold font-title text-gradient mb-4">Khayal & Co. - Projet Créatif</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
                     <h4 class="font-bold text-lg mb-2">Le Projet</h4>
-                    <p class="text-zinc-400 text-sm">Création de l'identité de marque et développement du site vitrine pour l'agence créative Khayal & Co. Le projet s'est concentré sur une expérience utilisateur fluide, un design responsive et une architecture de l'information claire.</p>
+                    <p class="text-zinc-400 text-sm"><b>Contexte :</b> Pour démontrer ma créativité et mes compétences techniques de manière concrète, j'ai imaginé Khayal & Co., un projet de marque personnel de A à Z.<br><br><b>Action :</b> J'ai créé l'identité de marque complète et développé le site vitrine en React et Tailwind CSS. C'est une vitrine de mon savoir-faire en conception, développement et branding.<br><br><b>Résultat :</b> Un projet portfolio vivant qui prouve ma capacité à construire une marque et une plateforme digitale de manière autonome, en maîtrisant à la fois les aspects créatifs et techniques.</p>
                     <h4 class="font-bold text-lg mt-6 mb-2">Technologies</h4>
                     <div class="flex flex-wrap gap-2 text-xs">
                          <span class="bg-zinc-800 text-zinc-300 px-2 py-1 rounded">React</span>
@@ -468,4 +468,5 @@
     </script>
 </body>
 </html>
+
 
