--- a/index.html
+++ b/index.html
@@ -264,7 +264,11 @@
         <section id="contact" class="py-24 text-center">
             <h2 class="text-4xl font-bold font-title mb-4">Parlons de votre projet</h2>
             <p class="text-zinc-400 max-w-xl mx-auto mb-8">Je suis toujours ouvert à de nouvelles collaborations et opportunités. N'hésitez pas à me contacter.</p>
-            <a href="mailto:eng.joseph.h.kamal@gmail.com" class="text-2xl font-semibold text-gradient hover:opacity-80 transition-opacity">eng.joseph.h.kamal@gmail.com</a>
+            <div class="flex flex-col md:flex-row justify-center items-center gap-4 md:gap-8">
+                <a href="mailto:eng.joseph.h.kamal@gmail.com" class="text-xl font-semibold text-gradient hover:opacity-80 transition-opacity">eng.joseph.h.kamal@gmail.com</a>
+                <span class="text-zinc-600 hidden md:block">|</span>
+                <p class="text-xl font-semibold text-zinc-300">+33 7 67 11 70 91</p>
+            </div>
             <div class="flex justify-center mt-8">
                  <a href="https://www.linkedin.com/in/joseph-hamdy-kamal-5abb7b241/" target="_blank" aria-label="LinkedIn" class="text-zinc-400 hover:text-white transition-colors">
                     <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
